# visionrobot

antiguo/plugin_nulo_gtk/src/: Makefile  Makefile.am  Makefile.in  main.c
antiguo/plugin_nulo_gtk/src/.deps/: main.Plo
aux/: ada_madrid2.tex
camara/: Camara.cpp  Captura.cpp  Captura.h  VMR_Capture.cpp  VMR_Capture.h  camara.bpr  camara.res  frmCamara.cpp  frmCamara.dfm  frmCamara.h
entrenamientoRed/: CImagen.cpp  CImagen.h  CListaImagenes.cpp  CListaImagenes.h  CRedNeuronal.cpp  CRedNeuronal.h  FuncionesAdicionales.cpp  FuncionesAdicionales.h  Principal.cpp  Principal.h  ShapeKnowledge.bpr  ShapeKnowledge.cpp  (+3 more)
vision/: Makefile.am  Makefile.win  SConstruct  autogen.sh  configure.in
vision/doc/: Doxyfile  ESTADO DEL ARTE.doc  Extraccion_regiones.tex  agradecimientos.tex  analisis_morfo_lexico.tex  autorizacion.tex  bibliografia.tex  centrado.tex  conclusiones.tex  diseno.tex  enmarcado_caracteres.tex  entorno_3d.tex  especificacion.tex  estado_arte.tex  filtro_carteles.tex  filtro_gestos.tex  filtros.tex  gestion.tex  imagen_digital.tex  imagenes.tex  introduccion.tex  ocr.tex  operaciones_morfologicas.tex  otros_modulos.tex  pipeline.dia  pipeline_ligero.dia  portada.doc  prolog.tex  pruebas.tex  red_descripcion_tecnica.tex  red_introduccion.tex  red_neuronal.tex  resumen.tex  robot.tex  rotacion.tex  suavizado.tex  trabajo_futuro.tex  vision.tex
vision/src/: Makefile.am  vision.dsw
vision/src/camara/: Captura.cpp  Makefile.am  camara.cpp  camara.dsp  camara.xml
vision/src/entorno_3d/: Makefile.am  entorno3d.dsp  entorno_3d.c  leeme.txt  luz.txt  terrenotemplo.txt
vision/src/entorno_3d/include/: Agua.h  Billboard.h  Billboard2D.h  Camara.h  Cielo.h  Entrada.h  Escena.h  Luz.h  MeshManager.h  Objeto.h  SistemaParticulas.h  Sombra.h  Texto.h  VentanaPrincipal.h  entorno3d.h  pipeline_sdk.h  robot_sdk.h
vision/src/entorno_3d/modelos/: TerrenoTemplo.raw  r2.x  templo.X
vision/src/entorno_3d/src/: Agua.cpp  Billboard.cpp  Billboard2D.cpp  Camara.cpp  Cielo.cpp  Entrada.cpp  Escena.cpp  Frustum.cpp  Mesh.cpp  Objeto.cpp  Principal.cpp  Sombra.cpp  Texto.cpp  VentanaPrincipal.cpp  entorno_3d.cpp
vision/src/filtro_gestos/: Makefile.am  filtro.lua  filtro_gestos.c  filtro_gestos.dsp  filtro_gestos_sdk.h
vision/src/gestion/: Makefile.am  gestion.c  gestion.dsp
vision/src/imagenes/: Makefile.am  avanzar.xpm  imagenes.c  imagenes.dsp  letra.xpm  modulo_imagenes.c  modulo_imagenes.cpp  suma.xpm
vision/src/joystick/: joystick.c  joystick.dsp
vision/src/libimagenes/: Captura.h  imagenes.c  imagenes.cpp  imagenes.h  libimagenes.dsp
vision/src/libparalelo/: libparalelo.dsp  paralelo.c  paralelo.h
vision/src/libpipeline/: Makefile.am  libpipeline.dsp  pipeline.c  pipeline.dtd  pipeline.h  pipeline_sdk.h
vision/src/ocr/: Makefile.am  base_datos  ocr.c  ocr.dsp  ocr_code.c  ocr_code.h
vision/src/pipeline/: Makefile.am  camara.xml  main.c  nulo.xml  pipeline.dsp  ventana_pipeline.glade  vision.xml
vision/src/post_gestion/: Makefile.am  post_gestion.c  post_gestion.dsp  post_gestion.lua
vision/src/prolog/: Makefile.am  dcg.pl  prolog.c  prolog.dsp  prueba.pl
vision/src/red_neuronal/: Makefile.am  red.c  red_neuronal.c  red_neuronal.dsp  red_neuronal.h  red_neuronal_sdk.h
vision/src/robot/: Makefile.am  robot.c  robot.dsp  robot.lua  robot_sdk.h
vision/src/salida/: Makefile.am  salida.c  salida.dsp  ventana_salida.glade
vision/src/ventana_imagen/: Makefile.am  ventana_imagen.c  ventana_imagen.dsp
vision/src/ventana_parametros/: Makefile.am  ventana_parametros.c  ventana_parametros.dsp  ventana_parametros.glade
vision/web/: index.php
(+392 files in other folders)
