AC_INIT(configure.in)

AC_CONFIG_HEADERS(config.h)

AC_DEFUN([AC_DEFINE_DIR], [
  prefix_NONE=
  exec_prefix_NONE=
  test "x$prefix" = xNONE && prefix_NONE=yes && prefix=$ac_default_prefix
  test "x$exec_prefix" = xNONE && exec_prefix_NONE=yes && exec_prefix=$prefix
  eval ac_define_dir="\"[$]$2\""
  AC_SUBST($1, "$ac_define_dir")
  AC_DEFINE_UNQUOTED($1, "$ac_define_dir", [$3])
  test "$prefix_NONE" && prefix=NONE
  test "$exec_prefix_NONE" && exec_prefix=NONE
])

AC_DEFINE_DIR(DATADIR, datadir, [Directorio de datos])
AC_DEFINE_DIR(LIBDIR, libdir, [Directorio de datos])


# Glib 2
PKG_CHECK_MODULES(GLIB, glib-2.0)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

# XML 2
PKG_CHECK_MODULES(XML2, libxml-2.0)
AC_SUBST(XML2_CFLAGS)
AC_SUBST(XML2_LIBS)

# Gtk 2
PKG_CHECK_MODULES(GTK, gtk+-2.0)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

# Glade 2
PKG_CHECK_MODULES(GLADE, libglade-2.0)
AC_SUBST(GLADE_CFLAGS)
AC_SUBST(GLADE_LIBS)

# Xine
PKG_CHECK_MODULES(XINE, libxine)
AC_SUBST(XINE_CFLAGS)
AC_SUBST(XINE_LIBS)

AM_INIT_AUTOMAKE(vision, 1.0)

AC_LANG_C
AC_PROG_CC
AM_PROG_LIBTOOL

AC_ARG_VAR([DOXYGEN], [Doxygen documentation generator])
AC_PATH_PROG([DOXYGEN], [doxygen])

AC_OUTPUT(Makefile src/Makefile src/libpipeline/Makefile src/pipeline/Makefile src/gestion/Makefile src/imagenes/Makefile src/ventana_imagen/Makefile src/filtro_gestos/Makefile src/ocr/Makefile src/prolog/Makefile src/red_neuronal/Makefile src/robot/Makefile src/salida/Makefile src/ventana_parametros/Makefile src/post_gestion/Makefile src/entorno_3d/Makefile src/gestion_ocr/Makefile doc/Makefile)
