## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES =

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = libplugin_nulo_gtk.la

libplugin_nulo_gtk_la_SOURCES = \
	main.c

libplugin_nulo_gtk_la_LDFLAGS = 

libplugin_nulo_gtk_la_LIBADD = 

